# src/Domain/Objects/Src/Dto/TaskDto.cs
@@ -14,6 +14,10 @@ namespace Objects.Dto
 
         public DateTime? ExpirationUtc { get; set; }
 
+        public string Category { get; set; }
+
+        public Priority Priority { get; set; }
+
         private static readonly IValidator<TaskDto> Validation = new TaskValidator();
 
         public ValidationResult Validate()
@@ -31,11 +35,22 @@ namespace Objects.Dto
         Processed
     }
 
+    public enum Priority
+    {
+        NotDefined,
+        Urgent,
+        High,
+        Medium,
+        Low
+    }
+
     class TaskValidator : AbstractValidator<TaskDto>
     {
         public TaskValidator()
         {
             RuleFor(t => t.Status).IsInEnum();
+
+            RuleFor(t => t.Priority).IsInEnum();
 
             RuleFor(t => t.Title).NotNull()
                 .MinimumLength(1)
@@ -44,6 +59,11 @@ namespace Objects.Dto
             RuleFor(t => t.Description).NotNull()
                 .MinimumLength(1)
                 .MaximumLength(4096);
+
+            RuleFor(t => t.Category)
+                .MinimumLength(1)
+                .MaximumLength(32)
+                .When(t => t.Category != null);
 
             RuleFor(t => t.ExpirationUtc)
                 .GreaterThanOrEqualTo(DateTime.UtcNow)
