# src/Services/Core.API/Src/View/Tasks/CreateTaskRequestModel.cs
@@ -1,4 +1,5 @@
-﻿using System;
+﻿using Objects.Dto;
+using System;
 
 namespace Core.API.View.Tasks
 {
@@ -6,8 +7,12 @@ namespace Core.API.View.Tasks
     {
         public string Title { get; set; }
 
+        public string Category { get; set; }
+
         public string Description { get; set; }
 
         public DateTime? ExpirationUtc { get; set; }
+
+        public Priority Priority { get; set; }
     }
 }
