# src/Services/Core.API/Src/View/Tasks/TaskViewModel.cs
@@ -12,9 +12,13 @@ namespace Core.API.View.Tasks
 
         public string Title { get; set; }
 
+        public string Category { get; set; }
+
         public string Description { get; set; }
 
         public TaskStatus Status { get; set; }
+
+        public Priority Priority { get; set; }
 
         public DateTime? ExpirationUtc { get; set; }
 
